k8s/apps/nebula/resources/deployment-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment

spec:
  replicas: 2
  selector:
    matchLabels:
      app: default
  template:
    metadata:
      annotations:
        fluentbit.io/exclude: "true"
      labels:
        app: default
    spec:
      containers:
        - name: server
          image: ghcr.io/slashnephy/nebula-server:master@sha256:f7fca9e502cc001d6cacc5e4b701bf941febcf5adcdfed5a00c7004cf57fbbff
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: media
              mountPath: /app/media
            - name: avatars
              mountPath: /app/avatars
            - name: stella-backup
              mountPath: /app/stella-backup
              readOnly: true
            - name: stella-media
              mountPath: /app/stella-media
              readOnly: true
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
          securityContext:
            allowPrivilegeEscalation: false
      volumes:
        - name: media
          hostPath:
            path: /opt/k8s-volumes/nebula/media
            type: DirectoryOrCreate
        - name: avatars
          hostPath:
            path: /opt/k8s-volumes/nebula/avatars
            type: DirectoryOrCreate
        - name: stella-backup
          hostPath:
            path: /opt/k8s-volumes/stella-backup
            type: Directory
        - name: stella-media
          hostPath:
            path: /opt/k8s-volumes/stella-media
            type: Directory
      restartPolicy: Always
      imagePullSecrets:
        - name: ghcr-io-credentials
