k8s/apps/nebula/resources/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend

spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: server
          image: ghcr.io/slashnephy/nebula-backend:main@sha256:413f2ac29458ab3e6c3e8bd05d3179c0083dd1d41ac1ce90b9872ca54ccb70ae
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: media
              mountPath: /app/media
            - name: thumbnails
              mountPath: /app/thumbnails
            - name: avatars
              mountPath: /app/avatars
            - name: tmp
              mountPath: /tmp
          livenessProbe:
            httpGet:
              path: /health
              port: http
          readinessProbe:
            httpGet:
              path: /health
              port: http
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
      volumes:
        - name: media
          hostPath:
            path: /mnt/local/nebula/media
            type: Directory
        - name: thumbnails
          hostPath:
            path: /mnt/local/nebula/thumbnails
            type: Directory
        - name: avatars
          hostPath:
            path: /mnt/local/nebula/avatars
            type: Directory
        - name: tmp
          emptyDir: {}
      restartPolicy: Always
      automountServiceAccountToken: false
      imagePullSecrets:
        - name: ghcr-io-credentials
      securityContext:
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
      terminationGracePeriodSeconds: 30
