k8s/apps/nebula/resources/deployment-ffmpeg.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ffmpeg

spec:
  replicas: 2
  selector:
    matchLabels:
      app: ffmpeg
  template:
    metadata:
      labels:
        app: ffmpeg
    spec:
      containers:
        - name: ffmpeg
          image: ghcr.io/slashnephy/nebula-ffmpeg:main@sha256:7c848a0383b67b9bcac2849573485eafa445f05a9df85e54533bd61b51207b43
          ports:
            - name: http
              containerPort: 8087
          volumeMounts:
            - name: tmp
              mountPath: /tmp
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 10
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
      volumes:
        - name: tmp
          emptyDir: {}
      restartPolicy: Always
      imagePullSecrets:
        - name: ghcr-io-credentials
      securityContext:
        seccompProfile:
          type: RuntimeDefault
