k8s/apps/nebula/resources/deployment-infra.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-infra

spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: infra
  template:
    metadata:
      labels:
        app: infra
    spec:
      containers:
        - name: db
          image: public.ecr.aws/docker/library/postgres:17.4-bookworm@sha256:7f29c02ba9eeff4de9a9f414d803faa0e6fe5e8d15ebe217e3e418c82e652b35
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db
              mountPath: /var/lib/postgresql/data
            - name: backup
              mountPath: /backup
              readonly: true
          securityContext:
            allowPrivilegeEscalation: false
        - name: redis
          image: public.ecr.aws/docker/library/redis:7.4.2-bookworm@sha256:bd41d55aae1ecff61b2fafd0d66761223fe94a60373eb6bb781cfbb570a84079
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis
              mountPath: /data
          securityContext:
            allowPrivilegeEscalation: false
        - name: river-ui
          image: ghcr.io/riverqueue/riverui:0.8.1@sha256:53c4b7ca46022eafcf15e4d724a86182e50c4018d8451f4039be22ab00e86ff8
          ports:
            - containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
      volumes:
        - name: db
          hostPath:
            path: /opt/k8s-volumes/nebula/db
            type: DirectoryOrCreate
        - name: redis
          hostPath:
            path: /opt/k8s-volumes/nebula/redis
            type: DirectoryOrCreate
        - name: backup
          hostPath:
            path: /opt/k8s-volumes/nebula/backup
            type: Directory
      restartPolicy: Always
