k8s/apps/nebula/resources/deployment-instagram.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: instagram

spec:
  replicas: 2
  selector:
    matchLabels:
      app: instagram
  template:
    metadata:
      labels:
        app: instagram
    spec:
      containers:
        - name: instagram
          image: ghcr.io/slashnephy/nebula-instagram:main@sha256:425bb620cc068b7de3a5074b98204af1432e7c1053f55986d95842486ed0d458
          ports:
            - name: http
              containerPort: 8085
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 10
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
      restartPolicy: Always
      imagePullSecrets:
        - name: ghcr-io-credentials
      securityContext:
        seccompProfile:
          type: RuntimeDefault
