k8s/apps/nebula/resources/deployment-ml.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml

spec:
  replicas: 1
  selector:
    matchLabels:
      app: ml
  template:
    metadata:
      labels:
        app: ml
    spec:
      containers:
        - name: ml
          image: ghcr.io/slashnephy/nebula-ml:main@sha256:7d4a9dab6f5b78a0aa4fdf040e6256c7aa3e590a78f1fe9e9aa87f0f3ea9c4a8
          ports:
            - name: http
              containerPort: 8083
          volumeMounts:
            - name: model-cache
              mountPath: /cache
            - name: tmp
              mountPath: /tmp
          resources:
            limits:
              gpu.intel.com/i915: "1"
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 10
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
      volumes:
        - name: model-cache
          hostPath:
            path: /mnt/local/nebula/ml-model-cache
            type: DirectoryOrCreate
        - name: tmp
          emptyDir: {}
      restartPolicy: Always
      imagePullSecrets:
        - name: ghcr-io-credentials
      securityContext:
        seccompProfile:
          type: RuntimeDefault
