k8s/apps/nebula/resources/deployment-river-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: river-ui

spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: river-ui
  template:
    metadata:
      labels:
        app: river-ui
    spec:
      containers:
        - name: app
          image: ghcr.io/riverqueue/riverui:0.17.0@sha256:18df6a6b7e90d9ea19c8bc6072d2598add79ccdf738447f76142f1e0aefea471
          ports:
            - name: http
              containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
      restartPolicy: Always
      securityContext:
        seccompProfile:
          type: RuntimeDefault
