k8s/apps/nebula/resources/deployment-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker

spec:
  replicas: 2
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: ghcr.io/slashnephy/nebula-worker:main@sha256:592e4874d8dab544084e590a1736c99cc6f767815acef65061f0094d2aa29243
          volumeMounts:
            - name: media
              mountPath: /app/media
            - name: thumbnails
              mountPath: /app/thumbnails
            - name: avatars
              mountPath: /app/avatars
            - name: tmp
              mountPath: /tmp
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
      volumes:
        - name: media
          hostPath:
            path: /mnt/local/nebula/media
            type: Directory
        - name: thumbnails
          hostPath:
            path: /mnt/local/nebula/thumbnails
            type: Directory
        - name: avatars
          hostPath:
            path: /mnt/local/nebula/avatars
            type: Directory
        - name: tmp
          emptyDir: {}
      restartPolicy: Always
      automountServiceAccountToken: false
      imagePullSecrets:
        - name: ghcr-io-credentials
      securityContext:
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
      terminationGracePeriodSeconds: 90
