k8s/apps/nebula/resources/deployment-xctid.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xctid

spec:
  replicas: 2
  selector:
    matchLabels:
      app: xctid
  template:
    metadata:
      labels:
        app: xctid
    spec:
      containers:
        - name: xctid
          image: ghcr.io/slashnephy/nebula-xctid:main@sha256:701bd248c3b99147155ad42d00877363b90dda3fa671fe35702b54376c335003
          ports:
            - name: http
              containerPort: 8084
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 10
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
      restartPolicy: Always
      imagePullSecrets:
        - name: ghcr-io-credentials
      securityContext:
        seccompProfile:
          type: RuntimeDefault
