k8s/apps/nebula/resources/deployment-ytdlp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ytdlp

spec:
  replicas: 2
  selector:
    matchLabels:
      app: ytdlp
  template:
    metadata:
      labels:
        app: ytdlp
    spec:
      containers:
        - name: ytdlp
          image: ghcr.io/slashnephy/nebula-ytdlp:main@sha256:79f017adc1d7f3f75646cc3bf82139747863a027b57d30cbbca62bea7bd938c5
          ports:
            - name: http
              containerPort: 8086
          volumeMounts:
            - name: tmp
              mountPath: /tmp
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 10
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
      volumes:
        - name: tmp
          emptyDir: {}
      restartPolicy: Always
      imagePullSecrets:
        - name: ghcr-io-credentials
      securityContext:
        seccompProfile:
          type: RuntimeDefault
