k8s/apps/nebula/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment

spec:
  replicas: 2
  selector:
    matchLabels:
      app: default
  template:
    metadata:
      labels:
        app: default
    spec:
      containers:
        - name: server
          image: ghcr.io/slashnephy/nebula-server:master@sha256:72eba48e3793eff2a12b8bfe99efc0e089fbc57cb9a116f984a8fcbb7b27592c
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: media
              mountPath: /backend/media
            - name: avatars
              mountPath: /backend/avatars
            - name: content
              mountPath: /backend/content
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
          securityContext:
            allowPrivilegeEscalation: false
        - name: worker
          image: ghcr.io/slashnephy/nebula-server:master@sha256:72eba48e3793eff2a12b8bfe99efc0e089fbc57cb9a116f984a8fcbb7b27592c
          command:
            - /backend/worker
          volumeMounts:
            - name: media
              mountPath: /backend/media
            - name: avatars
              mountPath: /backend/avatars
            - name: content
              mountPath: /backend/content
          securityContext:
            allowPrivilegeEscalation: false
      volumes:
        - name: media
          hostPath:
            path: /mnt/pool/nebula_media
            type: DirectoryOrCreate
        - name: avatars
          hostPath:
            path: /mnt/local/nebula/avatars
            type: DirectoryOrCreate
        - name: content
          hostPath:
            path: /mnt/pool/nebula_media
            type: DirectoryOrCreate
      restartPolicy: Always
      imagePullSecrets:
        - name: ghcr-io-credentials
