k8s/apps/nebula/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend

spec:
  selector:
    app: backend
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: ml

spec:
  selector:
    app: ml
  ports:
    - name: http
      port: 8083
      targetPort: http
      protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: xctid

spec:
  selector:
    app: xctid
  ports:
    - name: http
      port: 8084
      targetPort: http
      protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: instagram

spec:
  selector:
    app: instagram
  ports:
    - name: http
      port: 8085
      targetPort: http
      protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: ytdlp

spec:
  selector:
    app: ytdlp
  ports:
    - name: http
      port: 8086
      targetPort: http
      protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: frontend

spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: river-ui

spec:
  selector:
    app: river-ui
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
