k8s/apps/nebula/resources/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: route

spec:
  routes:
    - kind: Rule
      match: Host(`nebula.starry.blue`)
      priority: 10
      services:
        - name: frontend
          port: http
      middlewares:
        - name: forward-auth-authentik
          namespace: authentik

    - kind: Rule
      match: Host(`nebula.starry.blue`) && PathPrefix(`/outpost.goauthentik.io/`)
      priority: 15
      services:
        - name: authentik-server
          namespace: authentik
          port: http

    - kind: Rule
      match: Host(`nebula.starry.blue`) && (PathPrefix(`/api`) || PathPrefix(`/oauth`) || PathPrefix(`/.well-known`)) && !Path(`/oauth/authorize`)
      priority: 20
      services:
        - name: backend
          port: http

    - kind: Rule
      match: Host(`nebula-river.starry.blue`)
      priority: 10
      services:
        - name: river-ui
          port: http
      middlewares:
        - name: forward-auth-authentik
          namespace: authentik

    - kind: Rule
      match: Host(`nebula-river.starry.blue`) && PathPrefix(`/outpost.goauthentik.io/`)
      priority: 15
      services:
        - name: authentik-server
          namespace: authentik
          port: http

  tls:
    options:
      name: gateway
      namespace: traefik
